--- a/Responsive website/index.html
+++ b/Responsive website/index.html
@@ -5,11 +5,26 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>OSNAX</title>
+        <title>ControlZ</title>
     </head>
 
     <body>
-        
+        <div class="nav-bar">
+            <ul>
+                <li>
+                    <a href="#Home">Home</a>
+                </li>
+                <li>
+                    <a href="#About">About</a>
+                </li>
+                <li>
+                    <a href="#Projects">Projects</a>
+                </li>
+                <li>
+                    <a href="#interview">Contact Me</a>
+                </li>
+            </ul>
+        </div>
     </body>
 
 </html>
