--- a/Prayer/index.html
+++ b/Prayer/index.html
@@ -6,15 +6,18 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Flexbox</title>
-        <link rel="stylesheet" href="style.css">
+        <!-- <link rel="stylesheet" href="style.css"> -->
+        <link rel="stylesheet" href="newStyle.css">
     </head>
 
     <body>
         <!-- Parent container = flex-container -->
         <div class="container">
             <!-- children container = flex-items -->
-            <div class="box box-1">1</div>
-            <div class="box box-2">2</div>
+            <div class="box box-1">“O you who have believed, let not your wealth and your children divert you from
+                remembrance of Allah . And whoever does
+                that – then those are the losers.</div>
+            <div class="box box-2">2 <span>3</span></div>
             <div class="box box-3">3</div>
             <div class="box box-4">4</div>
             <div class="box box-5">5</div>
