added space between

--- a/Prayer/index.html
+++ b/Prayer/index.html
@@ -17,7 +17,7 @@
             <div class="box box-1">“O you who have believed, let not your wealth and your children divert you from
                 remembrance of Allah . And whoever does
                 that – then those are the losers.</div>
-            <div class="box box-2">2 <span>3</span></div>
+            <div class="box box-2">2</div>
             <div class="box box-3">3</div>
             <div class="box box-4">4</div>
             <div class="box box-5">5</div>
