--- a/Prayer/index.html
+++ b/Prayer/index.html
@@ -19,8 +19,12 @@
                 that – then those are the losers.</div>
             <div class="box box-2">2</div>
             <div class="box box-3">3</div>
-            <div class="box box-4">4</div>
-            <div class="box box-5">5</div>
+            <div class="box box-4">Fajr</div>
+            <div class="box box-5">Sunrise</div>
+            <div class="box box-6">Duhr</div>
+            <div class="box box-7">Asr</div>
+            <div class="box box-8">Maghrib</div>
+            <div class="box box-9">Isha</div>
         </div>
     </body>
 
