--- a/Prayer/index.html
+++ b/Prayer/index.html
@@ -17,14 +17,46 @@
             <div class="box box-1">“O you who have believed, let not your wealth and your children divert you from
                 remembrance of Allah . And whoever does
                 that – then those are the losers.</div>
-            <div class="box box-2">2</div>
-            <div class="box box-3">3</div>
-            <div class="box box-4">Fajr</div>
-            <div class="box box-5">Sunrise</div>
-            <div class="box box-6">Duhr</div>
-            <div class="box box-7">Asr</div>
-            <div class="box box-8">Maghrib</div>
-            <div class="box box-9">Isha</div>
+            <div class="time-container box-2">
+                <h3 id="currentDate">FRI, JULY 22</h3>
+                <h3 id="currentTime">9:42:21 PM</h3>
+            </div>
+            <div class="time-container box-3">
+                <h3>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                </h3>
+                <h3>Adhan</h3>
+                <h3>Iqama</h3>
+            </div>
+            <div class="prayer-container box-4">
+                <h2 id="fajr">Fajr&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</h2>
+                <h2 id="fajr-adhan">04:30&nbsp;&nbsp;&nbsp;</h2>
+                <h2 id="fajr-iqama">05:15</h2>
+            </div>
+            <div class="prayer-container box-5">
+                <h2 id="fajr">Sunrise&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</h2>
+                <h2 id="sunrise-adhan">06:14&nbsp;&nbsp;&nbsp;</h2>
+                <h2 id="sunrise-iqama">________</h2>
+            </div>
+            <div class="prayer-container box-6">
+                <h2 id="duhr">Dhur&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</h2>
+                <h2 id="duhr-adhan">01:14&nbsp;&nbsp;&nbsp;</h2>
+                <h2 id="duhr-iqama">02:20</h2>
+            </div>
+            <div class="prayer-container box-7">
+                <h2 id="asr">Asr&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</h2>
+                <h2 id="asr-adhan">01:34</h2>
+                <h2 id="asr-iqama">02:20</h2>
+            </div>
+            <div class="prayer-container box-8">
+                <h2 id="maghrib">Maghrib</h2>
+                <h2 id="maghrib-adhan">09:05</h2>
+                <h2 id="maghrib-iqama">02:20</h2>
+            </div>
+            <div class="prayer-container box-9">
+                <h2 id="isha">Isha&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</h2>
+                <h2 id="isha-adhan">10:34</h2>
+                <h2 id="isha-iqama">02:20</h2>
+            </div>
         </div>
     </body>
 
