--- a/Prayer/index.html
+++ b/Prayer/index.html
@@ -58,6 +58,7 @@
                 <h2 id="isha-iqama">02:20</h2>
             </div>
         </div>
+        <script src="app.js"></script>
     </body>
 
 </html>
