--- a/Prayer/index.html
+++ b/Prayer/index.html
@@ -18,8 +18,8 @@
                 remembrance of Allah . And whoever does
                 that – then those are the losers.</div>
             <div class="time-container box-2">
-                <h3 id="currentDate">FRI, JULY 22</h3>
-                <h3 id="currentTime">9:42:21 PM</h3>
+                <h3 id="currentDate"></h3>
+                <h3 id="currentTime"></h3>
             </div>
             <div class="time-container box-3">
                 <h3>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
