--- a/Prayer/index.html
+++ b/Prayer/index.html
@@ -28,8 +28,8 @@
                 <h3>Iqama</h3>
             </div>
             <div class="prayer-container box-4">
-                <h2 id="fajr">Fajr&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</h2>
-                <h2 id="fajr-adhan">04:30&nbsp;&nbsp;&nbsp;</h2>
+                <h2 id="fair-prayer">Fajr&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</h2>
+                <h2 id="fajr-adhan">05:20&nbsp;&nbsp;&nbsp;</h2>
                 <h2 id="fajr-iqama">05:15</h2>
             </div>
             <div class="prayer-container box-5">
