fajr time implemented

--- a/Prayer/index.html
+++ b/Prayer/index.html
@@ -29,12 +29,12 @@
             </div>
             <div class="prayer-container box-4">
                 <h2 id="fair-prayer">Fajr&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</h2>
-                <h2 id="fajr-adhan">05:20&nbsp;&nbsp;&nbsp;</h2>
+                <h2 id="fajr-adhan">00:00&nbsp;&nbsp;&nbsp;</h2>
                 <h2 id="fajr-iqama">05:15</h2>
             </div>
             <div class="prayer-container box-5">
                 <h2 id="fajr">Sunrise&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</h2>
-                <h2 id="sunrise-adhan">06:14&nbsp;&nbsp;&nbsp;</h2>
+                <h2 id="sunrise-time">06:14&nbsp;&nbsp;&nbsp;</h2>
                 <h2 id="sunrise-iqama">________</h2>
             </div>
             <div class="prayer-container box-6">
