playing with Json prayer times

--- a/Prayer/index.html
+++ b/Prayer/index.html
@@ -58,7 +58,8 @@
                 <h2 id="isha-iqama">00:00</h2>
             </div>
         </div>
-        <script src="app.js"></script>
+        <!-- <script src="app.js"></script> -->
+        <script src="test.js"></script>
     </body>
 
 </html>
