removed the warning color

--- a/Prayer/index.html
+++ b/Prayer/index.html
@@ -52,7 +52,7 @@
                 <h2 id="maghrib-adhan">00:00</h2>
                 <h2 id="maghrib-iqama">00:00</h2>
             </div>
-            <div class="prayer-container box-9">
+            <div class="prayer-container box-9" id="ishaBox">
                 <h2 id="isha">Isha&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</h2>
                 <h2 id="isha-adhan">00:00</h2>
                 <h2 id="isha-iqama">00:00</h2>
