added var types to the prayer times

--- a/Prayer/index.html
+++ b/Prayer/index.html
@@ -22,40 +22,43 @@
                 <h3 id="currentTime"></h3>
             </div>
             <div class="time-container box-3">
-                <h3>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                <h3>
                 </h3>
                 <h3>Adhan</h3>
                 <h3>Iqama</h3>
             </div>
             <div class="prayer-container box-4">
-                <h2 id="fair-prayer">Fajr&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</h2>
-                <h2 id="fajr-adhan">00:00&nbsp;&nbsp;&nbsp;</h2>
-                <h2 id="fajr-iqama">00:00</h2>
+                <h2 id="fair-prayer">Fajr</h2>
+                <h2 id="fajr-adhan"></h2>
+                <div class="time">
+                    <h2 id="fajr-iqama"></h2>
+                </div>
+
             </div>
             <div class="prayer-container box-5">
-                <h2 id="fajr">Sunrise&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</h2>
-                <h2 id="sunrise-time">00:00&nbsp;&nbsp;&nbsp;</h2>
+                <h2 id="fajr">Sunrise</h2>
+                <h2 id="sunrise-time"></h2>
                 <h2 id="sunrise-iqama">________</h2>
             </div>
             <div class="prayer-container box-6">
-                <h2 id="duhr">Dhur&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</h2>
-                <h2 id="duhr-adhan">00:00&nbsp;&nbsp;&nbsp;</h2>
-                <h2 id="duhr-iqama">00:00</h2>
+                <h2 id="duhr">Dhur</h2>
+                <h2 id="duhr-adhan"></h2>
+                <h2 id="duhr-iqama"></h2>
             </div>
             <div class="prayer-container box-7">
-                <h2 id="asr">Asr&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</h2>
-                <h2 id="asr-adhan">00:00</h2>
-                <h2 id="asr-iqama">00:00</h2>
+                <h2 id="asr">Asr</h2>
+                <h2 id="asr-adhan"></h2>
+                <h2 id="asr-iqama"></h2>
             </div>
             <div class="prayer-container box-8">
                 <h2 id="maghrib">Maghrib</h2>
-                <h2 id="maghrib-adhan">00:00</h2>
-                <h2 id="maghrib-iqama">00:00</h2>
+                <h2 id="maghrib-adhan"></h2>
+                <h2 id="maghrib-iqama"></h2>
             </div>
             <div class="prayer-container box-9" id="ishaBox">
-                <h2 id="isha">Isha&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</h2>
-                <h2 id="isha-adhan">00:00</h2>
-                <h2 id="isha-iqama">00:00</h2>
+                <h2 id="isha">Isha</h2>
+                <h2 id="isha-adhan"></h2>
+                <h2 id="isha-iqama"></h2>
             </div>
         </div>
         <script src="app.js"></script>
