--- a/Prayer/index.html
+++ b/Prayer/index.html
@@ -5,7 +5,7 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Flexbox</title>
+        <title>PrayerTime</title>
         <!-- <link rel="stylesheet" href="style.css"> -->
         <link rel="stylesheet" href="newStyle.css">
     </head>
@@ -30,9 +30,8 @@
             <div class="prayer-container box-4">
                 <h2 id="fair-prayer">Fajr</h2>
                 <h2 id="fajr-adhan"></h2>
-                <div class="time">
-                    <h2 id="fajr-iqama"></h2>
-                </div>
+                <h2 id="fajr-iqama"></h2>
+
 
             </div>
             <div class="prayer-container box-5">
