--- a/Prayer/test.html
+++ b/Prayer/test.html
@@ -13,9 +13,15 @@
     <body>
 
         <div class="flex flex3">
-            <div class="flex-items">1</div>
-            <div class="flex-items">2</div>
-            <div class="flex-items">3</div>
+            <div class="flex-items">Fajr</div>
+            <div class="flex-items">02:30</div>
+            <div class="flex-items">12:23</div>
+        </div>
+        <br>
+        <div class="flex flex3">
+            <div class="flex-items">Dhur</div>
+            <div class="flex-items">01:30</div>
+            <div class="flex-items">1:23</div>
         </div>
 
 
