used grid concept to center date

--- a/Prayer/index.html
+++ b/Prayer/index.html
@@ -10,57 +10,69 @@
         <link rel="stylesheet" href="newStyle.css">
     </head>
 
+
+
     <body>
+
+        <div class="top-control">
+            <p>Settings</p>
+            <p>Weather</p>
+        </div>
+
         <!-- Parent container = flex-container -->
         <div class="container">
+
+
+
             <!-- children container = flex-items -->
             <div class="box box-1">“O you who have believed, let not your wealth and your children divert you from
                 remembrance of Allah . And whoever does
                 that – then those are the losers.</div>
-            <div class="time-container box-2">
-                <h3 id="currentDate"></h3>
-                <h3 id="currentTime"></h3>
-            </div>
-            <div class="time-container box-3">
-                <h3>
-                </h3>
-                <h3>Adhan</h3>
-                <h3>Iqama</h3>
-            </div>
-            <div class="prayer-container box-4">
-                <h2 id="fair-prayer">Fajr</h2>
-                <h2 id="fajr-adhan"></h2>
-                <h2 id="fajr-iqama"></h2>
 
 
+            <div class="grid-container">
+                <h3 class="grid-item box-header"></h3>
+                <h3 class="grid-item box-header" id="currentDate"></h3>
+                <h3 class="grid-item box-header" id="currentTime"></h3>
+                <h3 class="grid-item box-header"> </h3>
+                <h3 class="grid-item box-header">Adhan</h3>
+                <h3 class="grid-item box-header">Iqama</h3>
+                <h2 class="grid-item  item-box" id="fair-prayer">Fajr</h2>
+                <h2 class="grid-item  item-box" id="fajr-adhan"></h2>
+                <h2 class="grid-item  item-box" id="fajr-iqama"></h2>
+
+
+                <h2 class="grid-item  item-box" id="fajr">Sunrise</h2>
+                <h2 class="grid-item  item-box" id="sunrise-time"></h2>
+                <h2 class="grid-item  item-box" id="sunrise-iqama">_______</h2>
+
+
+                <h2 class="grid-item  item-box" id="duhr">Dhur</h2>
+                <h2 class="grid-item  item-box" id="duhr-adhan"></h2>
+                <h2 class="grid-item  item-box" id="duhr-iqama"></h2>
+
+
+                <h2 class="grid-item  item-box" id="asr">Asr</h2>
+                <h2 class="grid-item  item-box" id="asr-adhan"></h2>
+                <h2 class="grid-item  item-box" id="asr-iqama"></h2>
+
+
+                <h2 class="grid-item  item-box" id="maghrib">Maghrib</h2>
+                <h2 class="grid-item  item-box" id="maghrib-adhan"></h2>
+                <h2 class="grid-item  item-box" id="maghrib-iqama"></h2>
+
+
+                <h2 class="grid-item last-item" id="isha">Isha</h2>
+                <h2 class="grid-item last-item" id="isha-adhan"></h2>
+                <h2 class="grid-item last-item" id="isha-iqama"></h2>
+
             </div>
-            <div class="prayer-container box-5">
-                <h2 id="fajr">Sunrise</h2>
-                <h2 id="sunrise-time"></h2>
-                <h2 id="sunrise-iqama">________</h2>
-            </div>
-            <div class="prayer-container box-6">
-                <h2 id="duhr">Dhur</h2>
-                <h2 id="duhr-adhan"></h2>
-                <h2 id="duhr-iqama"></h2>
-            </div>
-            <div class="prayer-container box-7">
-                <h2 id="asr">Asr</h2>
-                <h2 id="asr-adhan"></h2>
-                <h2 id="asr-iqama"></h2>
-            </div>
-            <div class="prayer-container box-8">
-                <h2 id="maghrib">Maghrib</h2>
-                <h2 id="maghrib-adhan"></h2>
-                <h2 id="maghrib-iqama"></h2>
-            </div>
-            <div class="prayer-container box-9" id="ishaBox">
-                <h2 id="isha">Isha</h2>
-                <h2 id="isha-adhan"></h2>
-                <h2 id="isha-iqama"></h2>
-            </div>
+
         </div>
-        <script src="app.js"></script>
+        </div>
+        </div>
+        <script src="app.js">
+        </script>
         <!-- <script src="test.js"></script> -->
     </body>
 
