--- a/Prayer/test.html
+++ b/Prayer/test.html
@@ -23,7 +23,24 @@
             <div class="flex-items">01:30</div>
             <div class="flex-items">1:23</div>
         </div>
-
+        <br>
+        <div class="flex flex3">
+            <div class="flex-items">Asr</div>
+            <div class="flex-items">11:30</div>
+            <div class="flex-items">23:23</div>
+        </div>
+        <br>
+        <div class="flex flex3">
+            <div class="flex-items">Maghrib</div>
+            <div class="flex-items">8:30</div>
+            <div class="flex-items">9:23</div>
+        </div>
+        <br>
+        <div class="flex flex3">
+            <div class="flex-items">Isha</div>
+            <div class="flex-items">01:30</div>
+            <div class="flex-items">1:23</div>
+        </div>
 
         <script src="app.js"></script>
         <!-- <script src="test.js"></script> -->
