removed control text

--- a/Prayer/index.html
+++ b/Prayer/index.html
@@ -14,10 +14,10 @@
 
     <body>
 
-        <div class="top-control">
+        <!-- <div class="top-control">
             <p>Settings</p>
             <p>Weather</p>
-        </div>
+        </div> -->
 
         <!-- Parent container = flex-container -->
         <div class="container">
